# AUSAXS

./: .clangd  .codacy.yml  .eman2log.txt  .gitignore  2epe.xml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MATCHING CRYSOL CHANGES  Makefile  README.md  TODO.txt  bad_files.txt  callgrind.out.12195  callgrind.out.14193  citation.cff  consistency.txt  coverage.html  coverage.txt  dummy.cif  ff.txt  fibonacci_sphere (copy).py  fibonacci_sphere.py  hydrated.txt  main  main.cpp  massif.txt  memtest.txt  new chi2s.txt  normal.conf  pdb2mrc  perf.data  perf.data.old  plan.md  plot_style.cpp  poster.txt  reduce_test.pdf.plot  saxs.dox.in  settings.txt  simfiles.txt  (+8 more)
executable/: CMakeLists.txt  README.md  ausaxs.cpp  bin_size_analysis.cpp  casein.cpp  consistency.cpp  crystal_comparison.cpp  crystal_scattering.cpp  debye_waller_avg.cpp  debye_waller_fitting.cpp  em.cpp  em_bench.cpp  em_fitter.cpp  em_fitter_test.cpp  em_pdb_fitter.cpp  em_simulate_saxs.cpp  exv_comparison.cpp  fit_all_exv.cpp  fit_consistency.cpp  fit_consistency2.cpp  generate_datcombine_dummy_datasets.cpp  gpu_debug.cpp  gpu_debug.wgsl  gregers.cpp  hist.cpp  inspect_map.cpp  intensity_fitter.cpp  main.cpp  new_hydration.cpp  optimize_radius.cpp  pdb_to_single_atom_type.cpp  plot.cpp  plot_data.cpp  plot_profiles.cpp  profile_comparison.cpp  rebin.cpp  remove_fourth_column_data.cpp  rigidbody.cpp  rigidbody_optimizer.cpp  rotate_map.cpp  (+18 more)
executable/gui/: CMakeLists.txt  intensity_fitter_gui.cpp  main.cpp  range_slider.cpp
executable/md/: CMakeFiles.txt  CMakeLists.txt  background_schemes.cpp  bench.cpp  extract_profile_water.cpp  frame_analysis.cpp  plumed.cpp  simulate.cpp  simulate_buffer.cpp  single_mol_sim.cpp  time_analysis.cpp
mac_debug/: CMakeLists.txt  main.cpp
source/api/: CMakeLists.txt  sasview.cpp
source/core/: CMakeLists.txt
source/crystal/: CMakeLists.txt  CrystalScattering.cpp  FibonacciMillers.cpp  Fval.cpp  ReducedMillers.cpp
source/em/: Box.cpp  CMakeLists.txt  CounterCulling.cpp  Datatypes.cpp  EMSettings.cpp  Image.cpp  ImageStack.cpp  NoCulling.cpp  ObjectBounds2D.cpp  ObjectBounds3D.cpp  PartialHistogramManager.cpp  ProteinManager.cpp  SimpleProteinManager.cpp  image.cpp
source/gpu/: CMakeLists.txt  WebGPUSimple.cpp  WebGPUSimple.wgsl  WebGPUSimple.wsl
source/math/: CMakeLists.txt  Cramer2DSolver.cpp  CubicSpline.cpp  Dataset.cpp  Decomposition.h  GivensSolver.cpp  LUPDecomposition.cpp  LUPDecomposition.h  LeastSquares.cpp  LinearSolver.h  Matrix.cpp  Matrix.h  Matrix.txt  Matrix2.txt  MatrixUtil.cpp  MatrixUtils.cpp  MovingAverager.cpp  PeakFinder.cpp  QRDecomposition.h  SimpleLeastSquares.cpp  Slice.cpp  Slice.h  Slice.txt  Vector.h  Vector.txt  Vector3.cpp  Vector3.h  VectorN.cpp  VectorN.h
source/md/: CMakeLists.txt  Utility.cpp
source/rigidbody/: BodySplitter.cpp  CMakeLists.txt  ConstrainedFitter.cpp  ConstrainedFitter.tpp  Constraint.cpp  DefaultOptimizer.cpp  Parameters.cpp  RigidBody.cpp  RigidBodySettings.cpp  RigidTransform.cpp  Rigidbody.cpp  TransformationStrategy.cpp
source/scripts/: CMakeLists.txt  graveyard.cpp  gui.cpp  hist.cpp  intensity_fitter.cpp  main.cpp  new_hydration.cpp  optimize_radius.cpp  rigidbody.cpp
test/: CMakeLists.txt  atom.cpp  axis.cpp  body.cpp  body_splitter.cpp  constraints.cpp  crystal.cpp  dataset.cpp  distance_constraint.cpp  em.cpp  existing_file.cpp  file.cpp  fitter.cpp  folder.cpp  grid.cpp  histogram.cpp  image.cpp  image_stack.cpp  image_stack_base.cpp  io.cpp  limit.cpp  lookup_table.cpp  managers.cpp  math.cpp  matrix.cpp  memtest.cpp  minimizer.cpp  object_bounds_2d.cpp  overlap_constraint.cpp  plots.cpp  protein.cpp  record.cpp  residue_parser.cpp  rigidbody.cpp  settings.cpp  slices.cpp  state_manager.cpp  stats.cpp  table.cpp  tables.cpp  (+6 more)
test/benchmarks/: ausaxs.json  ausaxs_serial.json  ausaxs_st.json  pepsi.json
test/container/: container_2d.cpp  container_3d.cpp  thread_local_wrapper.cpp
test/crystal/: crystal.cpp
test/data/: atom.cpp  body.cpp  body_splitter.cpp  bound_signaller.cpp  footer.cpp  header.cpp  molecule.cpp  protein.cpp  state_manager.cpp  terminate.cpp  unbound_signaller.cpp  water.cpp
test/dataset/: dataset.cpp  dataset2.cpp  dataset_2d.cpp  dataset_constructor.cpp  simple_dataset.cpp
test/em/: em.cpp  extended_landscape.cpp  image.cpp  image_stack.cpp  image_stack_base.cpp  managers.cpp  object_bounds_2d.cpp  smart_protein_manager.cpp
test/files/: test.ccp4
test/fitter/: fitter.cpp
test/form_factor/: exv_form_factors.cpp  form_factors.cpp  precalculated_exv_form_factor_product.cpp  precalculated_form_factor_product.cpp
test/grid/: grid.cpp  grid_debug.h  grid_surface_detection.cpp
test/hist/: compact_coordinates_data.cpp  composite_distance_histogram.cpp  composite_distance_histogram_ff.cpp  composite_distance_histogram_ff_avg.cpp  composite_distance_histogram_ff_explicit.cpp  composite_distance_histogram_ff_grid.cpp  debye_lookup_table.cpp  distance_histogram.cpp  hist_test_helper.h  histogram.cpp  histogram_2d.cpp  histogram_manager.cpp  histogram_manager_mt_ff_grid.cpp  scattering_histogram.cpp  weighted_distribution.cpp
test/hydrate/: grid.cpp
test/io/: file.cpp  io.cpp
test/math/: math.cpp  matrix.cpp  moving_average.cpp  slice.cpp  slices.cpp  statistics.cpp  stats.cpp  trigonometry.cpp  vector.cpp  vector3.cpp
test/mini/: minimizer.cpp
test/plots/: plots.cpp
test/rigidbody/: body_select_strategy.cpp  constrained_fitter.cpp  constraint_manager.cpp  constraints.cpp  decay_strategy.cpp  distance_constraint.cpp  exponential_decay.cpp  linear_constraints.cpp  linear_decay.cpp  no_constraints.cpp  overlap_constraint.cpp  parameter.cpp  parameters.cpp  rigidbody.cpp  rotations_only.cpp  simple_parameter_generation.cpp  transform_strategy.cpp  volumetric_constraints.cpp
test/table/: array_debye_table.cpp  debye_lookup_table.cpp  debye_table.cpp  table.cpp  vector_debye_table.cpp
test/utility/: axis.cpp  axis_3d.cpp  container_2d.cpp  container_3d.cpp  curl.cpp  lookup_table.cpp  residue_map.cpp  residue_parser.cpp  (+2 more)
tests/: CMakeLists.txt  README.md  settings.cpp
(+2862 files in other folders)
